[gd_scene load_steps=7 format=3 uid="uid://c04a4a2htynh6"]

[ext_resource type="Script" uid="uid://ssj6gki37bn6" path="res://src/ui/view_bug_stats_popup.gd" id="1_5fc3u"]
[ext_resource type="Script" uid="uid://caqyh5emwftpc" path="res://src/ui/view_bug_inventory.gd" id="1_prlj6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5fc3u"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rriq4"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 0.470588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_at6yc"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0.470588, 0.470588, 0.470588, 0.470588)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bnkjf"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0

[node name="ViewBugInventory" type="PanelContainer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -216.0
offset_right = 420.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_5fc3u")
script = ExtResource("1_prlj6")

[node name="HBoxContent" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="InventoryPanel" type="PanelContainer" parent="HBoxContent"]
custom_minimum_size = Vector2(208, 208)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_rriq4")

[node name="VBoxRows" type="VBoxContainer" parent="HBoxContent/InventoryPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="StatsPanel" type="PanelContainer" parent="HBoxContent"]
visible = false
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("1_5fc3u")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContent/StatsPanel"]
layout_mode = 2

[node name="Header" type="PanelContainer" parent="HBoxContent/StatsPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_at6yc")

[node name="rtlBugName" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Header"]
layout_mode = 2
bbcode_enabled = true
text = "Bug Name"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Body" type="PanelContainer" parent="HBoxContent/StatsPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_bnkjf")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContent/StatsPanel/VBoxContainer/Body"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="rtlBugDescription" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Bug description bug description, bug description bug description."
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="hbBio" type="HBoxContainer" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer"]
layout_mode = 2

[node name="hbWeight" type="HBoxContainer" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/hbBio"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/hbBio/hbWeight"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Wgt"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="rtlWeight" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/hbBio/hbWeight"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "10
"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="hbSpeed" type="HBoxContainer" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/hbBio"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/hbBio/hbSpeed"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Spd
"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="rtlSpeed" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/hbBio/hbSpeed"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "10
"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="hbValue" type="HBoxContainer" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/hbBio"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/hbBio/hbValue"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Val"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="rtlValue" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/hbBio/hbValue"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "100
"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="vbStats" type="VBoxContainer" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats"]
layout_mode = 2

[node name="hbCol1" type="HBoxContainer" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="vbHeaders1" type="VBoxContainer" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol1"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol1/vbHeaders1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Affability"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol1/vbHeaders1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Honor"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="RichTextLabel3" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol1/vbHeaders1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Leg"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="vbStats1" type="VBoxContainer" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol1"]
layout_mode = 2

[node name="rtlAff" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol1/vbStats1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "10
"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="rtlHonor" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol1/vbStats1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "10
"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="rtlLeg" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol1/vbStats1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "10
"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="hbCol2" type="HBoxContainer" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="vbHeaders2" type="VBoxContainer" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol2"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol2/vbHeaders2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Cronch
"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol2/vbHeaders2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/italics_font_size = 12
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[i]Juice"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="RichTextLabel3" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol2/vbHeaders2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Stink
"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="vbStats2" type="VBoxContainer" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol2"]
layout_mode = 2

[node name="rtlCrunch" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol2/vbStats2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "10
"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="rtlJuice" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol2/vbStats2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "10
"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="rtlStink" type="RichTextLabel" parent="HBoxContent/StatsPanel/VBoxContainer/Body/VBoxContainer/vbStats/HBoxContainer/hbCol2/vbStats2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "10
"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1
